# duckdb-paimon

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: MainDistributionPipeline.yml  release-bundle.yml
data/avro_manifest.db/testtbl/bucket-0/: data-3fbbaacb-c5fa-4d24-b676-f182e3dd714f-0.parquet
data/avro_manifest.db/testtbl/manifest/: manifest-a5a587db-9c02-4b0c-94fa-95dd30925eee-0  manifest-list-a5a587db-9c02-4b0c-94fa-95dd30925eee-0  manifest-list-a5a587db-9c02-4b0c-94fa-95dd30925eee-1
data/avro_manifest.db/testtbl/schema/: schema-0
data/avro_manifest.db/testtbl/snapshot/: snapshot-1
data/testdb.db/type_test_tbl/bucket-0/: data-164daccb-1832-40fc-9b43-d3c7789ba17a-0.parquet  data-e787dd50-e9f6-4593-9b69-40cb9bca0733-0.parquet
data/testdb.db/type_test_tbl/manifest/: manifest-85cba56e-63c6-46fc-8cb7-f358ea24b79a-0  manifest-9c42b84d-b1d3-41cd-84b6-4746737817da-0  manifest-list-85cba56e-63c6-46fc-8cb7-f358ea24b79a-0  manifest-list-85cba56e-63c6-46fc-8cb7-f358ea24b79a-1  manifest-list-9c42b84d-b1d3-41cd-84b6-4746737817da-1
data/testdb.db/type_test_tbl/schema/: schema-0
data/testdb.db/type_test_tbl/snapshot/: snapshot-1  snapshot-2
patches/: paimon-cpp-disable-global-constructors-warning.patch  paimon-cpp-disable-glog-unwind.patch  paimon-cpp-install-arrow-headers.patch  paimon-cpp-link-arrow-brotli-libs.patch  paimon-cpp-macos-ndebug-for-checked-cast.patch
src/: paimon_extension.cpp  paimon_functions.cpp
src/include/: paimon_catalog.hpp  paimon_functions.hpp  paimon_insert.hpp  paimon_schema_set.hpp  paimon_table_entry.hpp  paimon_table_set.hpp  paimon_type_utils.hpp
src/paimon_storage/: paimon_catalog.cpp  paimon_insert.cpp  paimon_scan.cpp  paimon_schema_entry.cpp  paimon_schema_set.cpp  paimon_snapshots.cpp  paimon_table_entry.cpp  paimon_table_set.cpp  paimon_type_utils.cpp
test/sql/: decimal.test  paimon_catalog.test  paimon_count_stats.test  paimon_ddl.test  paimon_scan.test  paimon_snapshots.test  paimon_time_travel.test  paimon_write.test  partition_filter_pushdown.test  predicate_pushdown.test  timestamp.test
